wip, started implementing zip files functionality, todo: properly use subdirectories for codestore writes/reads, do cleanup